--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             <div class="col-left">
                 <div class="about-img">
-                    <img src="../image/buka3.jpg" alt="Auteur du site">
+                    <img src="./CV/image/buka3.jpg" alt="Auteur du site">
                 </div>
             </div>
 
