--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buka Junior - Développeur Web & Web Mobile</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="./CV/css/style.css">
+    <link rel="stylesheet" href="./Styles/css/style.css">
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,7 +71,7 @@
 
             <div class="col-left">
                 <div class="about-img">
-                    <img src="./CV/image/buka3.jpg" alt="Auteur du site">
+                    <img src="./Styles/image/buka3.jpg" alt="Auteur du site">
                 </div>
             </div>
 
@@ -125,7 +125,7 @@
 
     <script>
         let typed = new Typed(".input", {
-            strings:["Buka René-Junior", "Développeur Web"],
+            strings:["Buka Junior", "Développeur Web"],
             typeSpeed: 70,
             backSpeed: 60,
             loop:true
